[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = ansible-pylibssh
url = https://github.com/ansible/pylibssh
project_urls =
    Bug Tracker = https://github.com/ansible/pylibssh/issues
    CI: GitHub Workflows = https://github.com/ansible/pylibssh/actions?query=branch:devel
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Docs: RTD = https://ansible-pylibssh.rtfd.io/
    Source Code = https://github.com/ansible/pylibssh
description = Python bindings for libssh client specific to Ansible use case
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible, Inc.
author_email = info+github/ansible/pylibssh@ansible.com
license = LGPLv2+
license_files =
    LICENSE.rst
classifiers =
    Development Status :: 2 - Pre-Alpha

    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

    Operating System :: MacOS
    Operating System :: POSIX :: Linux

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Cython

    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security
keywords =
    cython
    cext
    libssh

[options]
python_requires = >=3.6
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
# (`src/` layout)
package_dir =
    = src
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

[options.packages.find]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
# (`src/` layout)
where = src

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
#    *.c
    *.so
